# hellforge-engine2

./: .gitignore  CMakeLists.txt  README.md
src/: app.cpp  app.hpp  color.cpp  color.hpp  font.cpp  font.hpp  imagebuffer.cpp  imagebuffer.hpp  main.cpp  opengl.cpp  opengl.hpp  rect.cpp  rect.hpp  rendertarget.cpp  rendertarget.hpp  resources.cpp  resources.hpp  scaling.cpp  scaling.hpp  shaders.cpp  shaders.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp
